cluster/apps/services/wallabag/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-wallabag
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`wallabag.${SECRET_DOMAIN}`) # && PathPrefix(`/`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: crowdsec-traefik-bouncer
      #     - name: rfc1918
      #   # - name: basicauth
      services:
        - name: wallabag
          namespace: services
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
